itemsのindexビューの編集

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -133,13 +133,15 @@
        <li class='list'>
         <%= link_to "#" do %>
         <div class='item-img-content'>
-          <%= image_tag "item-sample.png", class: "item-img" %>
+          <%= image_tag item.image.variant(resize: '400x400'), class: "item-img" if item.image.attached? %>
           
 
           <%# 商品が売れていればsold outを表示しましょう %>
+          
           <div class='sold-out'>
             <span>Sold Out!!</span>
           </div>
+          
           <%# //商品が売れていればsold outを表示しましょう %>
 
         </div>
@@ -148,7 +150,7 @@
             <%= item.product_name %>
           </h3>
           <div class='item-price'>
-            <span><%= item.price %>円<br><%= item.shipping_charge_id %></span>
+            <span><%= item.price %>円<br><%= item.shipping_charge.name %></span>
             <div class='star-btn'>
               <%= image_tag "star.png", class:"star-icon" %>
               <span class='star-count'>0</span>
