--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -24,13 +24,13 @@
     </div>
     <% if user_signed_in? %>
       <% if current_user.id == @item.user_id && @item.present?%>
-        <%= link_to "商品の編集", edit_item_path(@item), method: :get, class: "item-red-btn" %>
+        <%= link_to "商品の編集", "#", method: :get, class: "item-red-btn" %>
         <p class="or-text">or</p>
-        <%= link_to "削除", item_path(@item), method: :delete, class:"item-destroy" %>
+        <%= link_to "削除", "#", method: :delete, class:"item-destroy" %>
          
       <% else %>
 
-        <%= link_to "購入画面に進む", item_orders_path(@item) ,class:"item-red-btn"%>
+        <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
       <% end %>
     <% end %>  
 
