サーバーサイドへのトークン送付機能の実装

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -61,10 +61,10 @@
         <div class='input-expiration-date-wrap'>
          <div id="card-exp-month" class="input-default"></div>
           <%# <%= f.text_area :hoge, class:"input-expiration-date", id:"card-exp-month", placeholder:"例)3" %>
-          <p>月</p>
-          <div id="card-exp-year" class="input-default"></div>
+          <%# <p>月</p> %>
+          <%# <div id="card-exp-year" class="input-default"></div> %>
           <%# <%= f.text_area :hoge, class:"input-expiration-date", id:"card-exp-year", placeholder:"例)23" %>
-          <p>年</p>
+          <%# <p>年</p> %>
         </div>
       </div>
       <div class="form-group">
