販売済み商品の表示の変更

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -136,11 +136,11 @@
           
 
           <%# 商品が売れていればsold outを表示しましょう %>
-          
+          <% if item.order.present? %>
           <div class='sold-out'>
             <span>Sold Out!!</span>
           </div>
-          
+           <% end %>
           <%# //商品が売れていればsold outを表示しましょう %>
 
         </div>
